# iceplayer-in-Linux

./: .directory  AUTHORS  INSTALL  Makefile  Makefile.am  Makefile.in  README.md  about.c  about.h  common.c  common.h  config.h  config.h.in  config.status  configure  configure.c  configure.h  configure.in  core.c  core.h  depcomp  desktop_lrc.c  desktop_lrc.h  download.c  download.h  equalizer.c  equalizer.h  help.c  iceplayer  id3.c  id3.h  install-sh  instance.c  instance.h  keybinding.c  keybinding.h  list.c  list.h  lrc.c  lrc.h  (+12 more)
autom4te.cache/: output.0  requests  traces.0
data/: Makefile  Makefile.am  Makefile.in
data/skin/: Makefile  Makefile.am  Makefile.in
data/skin/blue_life_slax/: Makefile  Makefile.am  Makefile.in
data/skin/koukou_slax/: Makefile  Makefile.am  Makefile.in
data/skin/mac_slax/: Makefile  Makefile.am  Makefile.in
data/skin/new_style_slax/: Makefile  Makefile.am  Makefile.in
