koukou_slaxdir = /usr/share/iceplayer/skin/koukou_slax
koukou_slax_DATA =  above.on.png mini.close.on.png next.on.png above.png mini.close.png next.png buttom_left.png mini.lists.on.png open.on.png buttom.png mini.lists.png open.png buttom_right.png mini_main.png pause.on.png button.config.on.png mini.mini.on.png pause.png button.config.png mini.mini.png play.on.png button.help.on.png mini.next.on.png play.png button.help.png mini.next.png prev.on.png button.list.on.png mini.on.png prev.png button.list.png mini.play.on.png progress.left.png button.lrc.on.png mini.play.png progress.node.on.png button.lrc.png mini.pause.on.png progress.node.png button.musicbox.on.png mini.pause.png progress.right.png button.musicbox.png right.png close.on.png stop.on.png close.png mini.png stop.png left.png mini.prev.on.png top_left.png main.png mini.prev.png top.png mini.songs.on.png top_right.png mini.songs.png volume.on.png max.on.png mini.stop.on.png volume.png max.png mini.stop.png 皮肤设置.conf menu.on.png min.on.png menu.png min.png  
EXTRA_DIST = $(koukou_slax_DATA)
